# my-folio-manager

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  celery_start.py  celerybeat-schedule-shm  celerybeat-schedule-wal  dev.py  pyproject.toml  reset_db.py  reset_db_tool.py  start.py
backend/app/: deps.py  main.py
backend/app/core/: celery_app.py  config.py  database.py  expression_engine.py
backend/app/models/: __init__.py  account.py  category.py  currency.py  fixed_deposit_account.py  investment_holding.py  loan_account.py  rule.py  savings_account.py  settings.py  transaction.py  user.py
backend/app/routers/: accounts.py  assistant.py  auth.py  categories.py  currencies.py  data.py  holdings.py  jobs.py  portfolio.py  rules.py  settings.py  summary.py  transactions.py
backend/app/schemas/: account.py  category.py  common.py  investment.py  portfolio.py  rule.py  summary.py  transaction.py
backend/app/services/: account_service.py  ai_agent.py  category_service.py  data_export_service.py  investment_service.py  portfolio_service.py  rules_service.py  settings_service.py  stock_service.py  summary_service.py  transaction_service.py
backend/app/tasks/: automation.py  interest_tasks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  index.css  main.tsx  types.ts
frontend/src/components/: AccountSummaryPanel.tsx  ConfirmModal.tsx  Modal.tsx  (+11 more)
mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  test_clamp.dart
mobile/test/: widget_test.dart
(+90 files in other folders)
