[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"

[project]
name = "my-folio-manager-backend"
version = "0.1.0"
description = "Backend for My Folio Manager"
authors = [
    {name = "Sumanth"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "pymysql (>=1.1.2,<2.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "celery[redis] (>=5.4.0,<6.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "celery-redbeat (>=2.2.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "yfinance (>=0.2.50,<0.3.0)",
    "pandas (>=2.0.0,<3.0.0)",
]


[tool.poetry.scripts]
dev = "dev:__main__"
start = "start:__main__"
worker = "celery_start:start_worker"
beat = "celery_start:start_beat"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
